# LiarsDice

./: .gitignore  CMakeLists.txt  build.sh
.github/workflows/: cmake.yml
images/: CMakeLists.txt
include/: CMakeLists.txt
include/core/: CMakeLists.txt
include/core/die/: CMakeLists.txt  Die.h
include/core/player/: CMakeLists.txt  Player.h  PlayerList.h  PlayerNode.h
include/lib/core/die/: Die.h  DieList.h  DieNode.h
include/lib/core/player/: Player.h  PlayerList.h
include/lib/core/poker_utils/: PokerUtils.h
include/lib/game_logic/hand/: Hand.h
include/lib/game_logic/poker_utils/: PokerUtils.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/die/: CMakeLists.txt  Die.c  DieList.c  DieNode.c
lib/core/player/: CMakeLists.txt  Player.c  PlayerList.c  PlayerNode.c
lib/core/poker_utils/: CMakeLists.txt  PokerUtils.c
lib/game_logic/: CMakeLists.txt
lib/game_logic/hand/: CMakeLists.txt  Hand.c
lib/game_logic/poker_utils/: PokerUtils.c
playdate/C_API/buildsupport/: arm.cmake  common.mk  playdate.cmake  playdate_game.cmake  setup.c
playdate/C_API/pd_api/: pd_api_gfx.h  pd_api_sound.h
src/: CMakeLists.txt
src/core/die/: CMakeLists.txt  Die.c
src/core/player/: CMakeLists.txt  Player.c  PlayerList.c  PlayerNode.c
test/: CMakeLists.txt
test/core/: CMakeLists.txt  TestDie.h  TestPlayer.h  TestPlayerList.h  TestPokerUtils.h  main.c
test/lib/: CMakeLists.txt
test/lib/core/: TestDie.h  TestDieList.h  TestDieNode.h  TestPlayer.h  TestPlayerList.h  TestPlayerNode.h  main.c
test/lib/game_logic/: CMakeLists.txt  TestHand.h  TestPokerUtils.h  main.c
